--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -165,6 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="92dp"
             android:layout_marginBottom="16dp"
+            android:onClick="LoadYT"
             android:text="YT"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button4" />
