--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:onClick="BackVid"
+            android:longClickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/PlayVid"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:onClick="FowardVid"
+            android:longClickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/PlayVid"
@@ -148,27 +148,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button4"
             android:layout_width="104dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginBottom="16dp"
             android:onClick="LoadVid"
-            android:text="Direct"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@mipmap/ic_local_marker_round"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/button"
             android:layout_width="105dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="92dp"
             android:layout_marginBottom="16dp"
             android:onClick="LoadYT"
-            android:text="YT"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button4" />
+            app:layout_constraintStart_toEndOf="@+id/button4"
+            app:srcCompat="@mipmap/ic_youtube_bt_round"/>
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
