--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             app:srcCompat="@mipmap/icback_round" />
 
         <ImageButton
-            android:id="@+id/FowardVid"
+            android:id="@+id/ForwardVid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
